add kafka ingestion as plugin
Signed-off-by: Yupeng Fu <yupeng@uber.com>